[package]
edition = "2024"
name = "esp32c3"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "esp32c3"
path = "./src/bin/main.rs"

[dependencies]
onewire = { path = "../..", features = ["defmt", "defmt-debug2format"] }

esp-hal = { version = "~1.1.0", features = ["defmt", "esp32c3", "unstable"] }

esp-rtos = { version = "0.3.0", features = ["defmt", "embassy", "esp32c3"] }

defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32c3"] }

embassy-executor = { version = "0.10.0", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }

critical-section = "1.2.0"
static_cell = "2.1.1"


# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2         # prefer slower builds but better debugging experience
lto = 'fat'
opt-level = 's'
